testsuite/tests/grammar/two_roots/test.out
== test.lkt ==
test.lkt:14:1: error: There can be only one root node (FooNode)
14 | class OtherNode implements Node[OtherNode] {
   | ^


lkt_compile: Done
